tests/compile_errors/025-multiple-out.buzz
// Only one `out` statement is allowed in block expression
test "multiple out statements" {
    from {
        out "one";
        out "two";
    };
}